@@ -37,6 +37,7 @@ SVN trunk:
    * Support filtering on campaign_list requests
      * filter by name
      * filter by last update time (before or after)
+     * filter by language of translation
    * campaign_list response now contains the time the request was processed
    * campaign_list response now contains information about translations
  * utils: added weblist.pl and webtgz.pl web interface programs
